--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.1",
+    "prompt-sync": "^4.2.0",
     "unsplash-js": "^7.0.2"
   }
 }
